[tool.poetry]
name = "distributed-monitor"
version = "0.1.0"
description = ""
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.23.2"
pandas = "^1.4.3"
seaborn = "^0.12.0"
matplotlib = "^3.5.3"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
jupyter = "^1.0.0"
ipynb = "^0.5.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
