[tool.poetry]
name = "pred-decent"
version = "0.1.1"
description = ""
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]
#package-mode = false
packages = [
    { include = "decmon" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
pandas = "^2.0.1"
seaborn = "^0.12.0"
matplotlib = "^3.5.3"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
jupyter = "^1.0.0"
ipynb = "^0.5.1"
yellowbrick = "^1.5"
ipykernel = "^6.23.1"
mgzip = "^0.2.1"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
